tests/NormalTests/paczka1/fuzzy1/41225057.err
Error in line 4: lF4u6s S173 23,4
Error in line 2: oqM54Cab S173 99,6
Error in line 7: lF4u6s S942 27,6
Error in line 10: lF4u6s S173 56,5
Error in line 24: lF4u6s S588 -4,6
Error in line 26: oqM54Cab S173 88,c
Error in line 28: S588 S173 26,1
Error in line 21: lF4u6s S588 57,0
Error in line 35: lF4u6s S173 -4,3
Error in line 23: oqM54Cab S588 78,8
